tests/negative/09_duplicate_param.nova
// EXPECT-ERROR: "duplicate"
fn bad(a: i32, a: i32) -> i32 {
    return a;
}
fn main() -> i32 {
    return 0;
}
